@@ -1,3 +1,8 @@
+2005-06-28  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* map.c, map.h: Handle Syslog-related changes (SyslogLevel isn't a [Flags]
+	  enum; change in order between LOG_USER and LOG_USRE).
+
 2005-06-27  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* map.c, map.h: Add corrected spelling of LOG_USER.
